--- a/bill_ar.html
+++ b/bill_ar.html
@@ -634,6 +634,8 @@
             "Bussiness / Personal card Design": 80,
             "Digital Wedding Card": 90,
             "identity card ": 80,
+            "Fees card":80,
+            "Aniversary card":70,
             "Image genaration": 5,
             "Poster": 50,
             "PAN Card": 170,
