ar_network.html
Updated the HTML structure and styling for AR Network House webpage, enhancing sections like services, projects, and contact.

--- a/ar_network.html
+++ b/ar_network.html
@@ -443,13 +443,15 @@
                     </ul>
                 </div>
                   <div class="service-card">
-                    <h3>Card</h3>
+                    <h3>Cards</h3>
                     <p>Customized invitation & Bussiness cards</p>
                     <ul>
                         <li>Birthday card</li>
                          <li>identity card</li>
                         <li>Bussiness Card</li>
                         <li>Wedding Card</li>
+                        <li>Fees card</li>
+                        <li>Aniversary card</li>
                     </ul>
                 </div>
                 <div class="service-card">
