ar_network.html
Added a new social media section with Threads link and updated the contact section with social media buttons.

--- a/ar_network.html
+++ b/ar_network.html
@@ -308,6 +308,10 @@
             background: linear-gradient(45deg, #fd1d1d, #e1306c, #c13584, #833ab4);
         }
 
+          .btn-contact.threads {
+            background: black;
+        }
+
         .btn-contact:hover {
             transform: translateY(-4px);
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
@@ -547,6 +551,14 @@
                     <img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram">
                     Instagram
                 </a>
+
+                 <!-- Threads Button -->
+                 <a href="https://www.threads.com/@ar_network_house"
+                    class="btn-contact threads">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/d/db/Threads_%28app%29.png" alt="Threads">
+                    Threads
+                </a>
+
             </div>
         </div>
     </section>
