--- a/ar_network.html
+++ b/ar_network.html
@@ -447,7 +447,7 @@
                     </ul>
                 </div>
                   <div class="service-card">
-                    <h3>Cards</h3>
+                    <h3>Digital Cards</h3>
                     <p>Customized invitation & Bussiness cards</p>
                     <ul>
                         <li>Birthday card</li>
