--- a/bill_ar.html
+++ b/bill_ar.html
@@ -559,8 +559,9 @@
                             </td>
                             <td>
                                 <div class="form-row">
-                                    <label for="sellerName">Seller Name</label>
+                                    <label for="sellerName">Seller </label>
                                     <select id="sellerName" class="seller-select">
+                                        <option value="Company">Company</option>
                                         <option value="RSR">RSR</option>
                                         <option value="AD">AD</option>
                                         <option value="AR">AR</option>
